Updated HeroesOfPymoli jupyter notebook with Gender Demographics & Purchase Analysis

--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.4-final"
+   "version": "3.7.5-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,14 +18,14 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python37464bitbaseconda935f42da8af44081a8949c6c83ee0939",
-   "display_name": "Python 3.7.4 64-bit ('base': conda)"
+   "name": "python37564bitpythondatacondac30bd6fcf4694af7948ebff9c485f105",
+   "display_name": "Python 3.7.5 64-bit ('PythonData': conda)"
   }
  },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,13 @@
     "# CSV file to load\n",
     "file_to_load = \"Resources/purchase_data.csv\"\n",
     "\n",
-    "# Read Purchase Data File and store into Pandas data frame\n",
+    "# Read Purchasing Data File and store into Pandas data frame\n",
     "purchase_data = pd.read_csv(file_to_load)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "# Get count of total (unique) players and display them \n",
+    "# Get the count of total (unique) players and display them \n",
     "player_count = purchase_data['SN'].nunique()\n",
     "print(f\"PLAYER COUNT\")\n",
     "print(f\"_\" * 30)\n",
@@ -60,22 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "PURCHASE ANALYSIS\n_____________________________________________________________________________\n"
+    },
+    {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Number of Unique Items</th>\n      <th>Average Price</th>\n      <th>Number of Purchases</th>\n      <th>Total Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>183</td>\n      <td>$3.05</td>\n      <td>780</td>\n      <td>$2,379.77</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Number of Unique Items</th>\n      <th>Average Price</th>\n      <th>Number of Purchases</th>\n      <th>Total Revenue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>183</td>\n      <td>$3.05</td>\n      <td>780</td>\n      <td>$2,379.77</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n0                     183         $3.05                  780     $2,379.77"
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Run basic calculations on the data frame to come up with a purchase analysis \n",
-    "\n",
+    "# Run basic calculations on the data frame to come up with a total purchase analysis \n",
     "# Calculate number of unique items, average purchase price, total number of purchases and total revenue\n",
     "unique_items = purchase_data['Item ID'].nunique()\n",
     "average_price = purchase_data['Price'].mean()\n",
@@ -84,14 +88,106 @@
     "\n",
     "# Create a summary data frame to hold the analyzed results\n",
     "purchase_analysis = [(unique_items, average_price, total_purchases, total_revenue)]\n",
-    "purchase_summary = pd.DataFrame(purchase_analysis, columns=[\"Number of Unique Items\",\"Average Price\",\"Number of Purchases\",\"Total Revenue\"])\n",
+    "purchase_summary = pd.DataFrame(purchase_analysis, columns=['Number of Unique Items','Average Price','Number of Purchases','Total Revenue'])\n",
     "\n",
     "# Format the average price and total revenue values\n",
-    "purchase_summary[\"Average Price\"] = purchase_summary[\"Average Price\"].map(\"${:.2f}\".format)\n",
-    "purchase_summary[\"Total Revenue\"] = purchase_summary[\"Total Revenue\"].map(\"${:,.2f}\".format)\n",
+    "purchase_summary['Average Price'] = purchase_summary['Average Price'].map(\"${:.2f}\".format)\n",
+    "purchase_summary['Total Revenue'] = purchase_summary['Total Revenue'].map(\"${:,.2f}\".format)\n",
     "\n",
-    "# Display summary data frame \n",
+    "# Display Purchase Analysis Summary data frame \n",
+    "print(f\"PURCHASE ANALYSIS\")\n",
+    "print(f\"_\" * 77)\n",
     "purchase_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "GENDER DEMOGRAPHICS\n_____________________________________________________\n"
+    },
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Gender</th>\n      <th>Percentage of Players</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Male</th>\n      <td>484</td>\n      <td>84.03%</td>\n    </tr>\n    <tr>\n      <th>Female</th>\n      <td>81</td>\n      <td>14.06%</td>\n    </tr>\n    <tr>\n      <th>Other / Non-Disclosed</th>\n      <td>11</td>\n      <td>1.91%</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                       Gender Percentage of Players\nMale                      484                84.03%\nFemale                     81                14.06%\nOther / Non-Disclosed      11                 1.91%"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# De-dup data frame on players so we can determine gender demographics \n",
+    "unique_players = purchase_data.drop_duplicates(subset='SN')\n",
+    "\n",
+    "# Get count of players based on their gender\n",
+    "gender_counts = unique_players['Gender'].value_counts()\n",
+    "\n",
+    "# Save gender counts to a new summary data frame\n",
+    "gender_summary = pd.DataFrame(gender_counts)\n",
+    "\n",
+    "# Calculate the percentage of players for each gender\n",
+    "gender_summary['Percentage of Players'] = gender_summary['Gender'] / gender_summary['Gender'].sum()\n",
+    "\n",
+    "# Format the percentage column in the summary data frame\n",
+    "gender_summary['Percentage of Players'] = gender_summary['Percentage of Players'].map(\"{:.2%}\".format)\n",
+    "\n",
+    "# Display Gender Demographics Summary data frame \n",
+    "print(f\"GENDER DEMOGRAPHICS\")\n",
+    "print(f\"_\" * 53)\n",
+    "gender_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "PURCHASE ANALYSIS (BY GENDER)\n__________________________________________________________________________________________________________________\n"
+    },
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Purchase Count</th>\n      <th>Average Purchase Price</th>\n      <th>Total Purchase Value</th>\n      <th>Avg Total Purchase per Person</th>\n    </tr>\n    <tr>\n      <th>Gender</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Female</th>\n      <td>113</td>\n      <td>$3.20</td>\n      <td>$361.94</td>\n      <td>$4.47</td>\n    </tr>\n    <tr>\n      <th>Male</th>\n      <td>652</td>\n      <td>$3.02</td>\n      <td>$1,967.64</td>\n      <td>$4.07</td>\n    </tr>\n    <tr>\n      <th>Other / Non-Disclosed</th>\n      <td>15</td>\n      <td>$3.35</td>\n      <td>$50.19</td>\n      <td>$4.56</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                       Purchase Count Average Purchase Price  \\\nGender                                                         \nFemale                            113                  $3.20   \nMale                              652                  $3.02   \nOther / Non-Disclosed              15                  $3.35   \n\n                      Total Purchase Value Avg Total Purchase per Person  \nGender                                                                    \nFemale                             $361.94                         $4.47  \nMale                             $1,967.64                         $4.07  \nOther / Non-Disclosed               $50.19                         $4.56  "
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group the original data frame by gender to run a gender-based purchase analysis\n",
+    "gender_demographics = purchase_data.groupby(['Gender'])\n",
+    "\n",
+    "# Calculate purchase count, average purchase price, total purchase value and average purchase total per person\n",
+    "# These are all saved as Series data type\n",
+    "purchase_count = gender_demographics['Purchase ID'].nunique()\n",
+    "average_purchase_price = gender_demographics['Price'].mean()\n",
+    "total_purchase_price = gender_demographics['Price'].sum()\n",
+    "average_purchase_total_per_player = total_purchase_price / gender_counts\n",
+    "\n",
+    "# Save the purchase analyses Series' to a Dictionary\n",
+    "purchase_analysis_by_gender = { 'Purchase Count': purchase_count, 'Average Purchase Price': average_purchase_price, 'Total Purchase Value': total_purchase_price, 'Avg Total Purchase per Person': average_purchase_total_per_player }\n",
+    "\n",
+    "# Create Purchase Analysis Summary data frame from the Dictionary\n",
+    "purchase_summary_by_gender = pd.DataFrame(purchase_analysis_by_gender)\n",
+    "\n",
+    "# Format all the price columns in the data frame\n",
+    "purchase_summary_by_gender['Average Purchase Price'] = purchase_summary_by_gender['Average Purchase Price'].map(\"${:.2f}\".format)\n",
+    "purchase_summary_by_gender['Total Purchase Value'] = purchase_summary_by_gender['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
+    "purchase_summary_by_gender['Avg Total Purchase per Person'] = purchase_summary_by_gender['Avg Total Purchase per Person'].map(\"${:.2f}\".format)\n",
+    "\n",
+    "# Display Purchase Analysis Summary data frame\n",
+    "print(f\"PURCHASE ANALYSIS (BY GENDER)\")\n",
+    "print(f\"_\" * 114)\n",
+    "purchase_summary_by_gender"
    ]
   },
   {
